--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2024"
 axum = "0.8.4"
 chrono = { version = "0.4.41", features = ["serde"] }
 dotenv = "0.15.0"
+redis = { version = "0.32.4", features = ["tls-rustls", "tokio-rustls-comp"] }
 reqwest = { version = "0.12.22", features = ["rustls-tls", "json"] }
 serde = { version = "1.0.219", features = ["derive"] }
 tokio = { version = "1.47.0", features = ["full"] }
