--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,3 +11,4 @@ redis = { version = "0.32.4", features = ["tls-rustls", "tokio-rustls-comp"] }
 reqwest = { version = "0.12.22", features = ["rustls-tls", "json"] }
 serde = { version = "1.0.219", features = ["derive"] }
 tokio = { version = "1.47.0", features = ["full"] }
+uuid = { version = "1.17.0", features = ["serde", "v4"] }
